feat: Implement Boost Packages management with CRUD operations and integrate Cloudinary for media uploads